--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -7,7 +7,7 @@
 body {
   background-color: #d9dcd6;
 }
-
+/* changed header into semntic html element */
 header {
   padding: 20px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
@@ -20,6 +20,7 @@ header h1 {
   font-size: 48px;
 }
 
+/* nav now semantic element */
 header nav {
   padding-top: 15px;
   margin-right: 20px;
@@ -82,22 +83,26 @@ p {
   background-color: #2589bd;
 }
 
+/* consolidated various benefit classes with same css into one */
 .benefit {
   margin-bottom: 32px;
   color: #ffffff;
 }
 
+/* consolidate benefit h3 element */
 .benefit h3 {
   margin-bottom: 10px;
   text-align: center;
 }
 
+/* consolidate benefit img element */
 .benefit img {
   display: block;
   margin: 10px auto;
   max-width: 150px;
 }
 
+/* consolidate features classes */
 .features {
   margin-bottom: 20px;
   padding: 50px;
@@ -107,15 +112,18 @@ p {
   color: #ffffff;
 }
 
+/* condense features img element */
 .features img {
   max-height: 200px;
 }
 
+/*condense features h2 element */
 .features h2 {
   margin-bottom: 20px;
   font-size: 36px;
 }
 
+/* turn footer into semantic html */
 footer {
   padding: 30px;
   clear: both;
